# jayhawk

./: README.md  pyproject.toml
example/: example.py  example_echo.py
example/exampleroot/localhost/: index.gmi
jayhawk/: __init__.py  dispatch.py
