[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "jayhawk"
version = "1.0.1"
description = "An extensible server for the Spartan protocol."
repository = "https://github.com/MineRobber9000/jayhawk"
readme = "README.md"
license = "MIT"
authors = ['Robert "khuxkm" Miles <khuxkm+jayhawk@tilde.team>']
classifiers = [
	"Development Status :: 5 - Production/Stable"
]
